--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@
     --color-quinary: #D1E8E2; /* Pale Robin Egg Blue */
 }
 
+
 .glitch-con {
     font-family: "Londrina Outline", cursive;
     text-transform: uppercase;
@@ -27,7 +28,7 @@
     margin-top: 4em;
     text-align: center;
   }
-
+  
   section .glitch-con h2.section-title {
     font-size: 100%;
     margin: 0;
@@ -261,140 +262,17 @@
       transform: skew(-0.2deg);
     }
   }
-
-
-
-
-@media (max-width: 768px) {
-    .merch-action-btn {
-        font-size: 1rem;
-        padding: 8px 16px;
-    }
-}
-
-@media (max-width: 480px) {
-    .test-action-btn {
-        font-size: 0.9rem;
-        padding: 6px 12px;
-    }
-}
-
-
-.music-grid {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    justify-content: space-between;
-}
-
-.music-item {
-    flex: 1 1 25%;
-    position: relative;
-    background: rgba(0, 0, 0, 0.5);
-    border-radius: 10px;
-    overflow: hidden;
-    text-align: center;
-}
-
-.music-item img {
-    width: 100%;
-    height: auto;
-    border-radius: 50%;
-    transition: transform 0.3s ease-in-out;
-}
-
-.music-item img:hover {
-    transform: scale(1.1);
-}
-
-.music-item p {
-    margin: 10px 0 5px;
-    font-size: 1rem;
-    font-weight: bold;
-}
-
-.music-item a {
-    color: #FFD700; /* Gold color */
-    text-decoration: none;
-    font-size: 0.9rem;
-}
-
-.music-item a:hover {
-    text-decoration: underline;
-}
-
-.music-text {
-    flex: 1 1 50%;
-    padding: 40px;
-    background: rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
-    text-align: left;
-}
-
-.music-text h3 {
-    text-align: center;
-    font-size: 2rem;
-    margin-bottom: 10px;
-}
-
-.music-text p {
-    font-size: 1.3rem;
-    margin-bottom: 20px;
-}
-
-
-.action-btn2 {
-    font-family: 'Futura';
-    background-color: transparent; /* Transparent background */
-    border: 2px solid #fff; /* White border */
-    color: #fff; /* White text */
-    padding: 10px 20px; /* Padding for the button */
-    font-size: 1.2rem; /* Font size */
-    font-family: 'Futura', sans-serif; /* Font family */
-    border-radius: 5px; /* Rounded corners */
-    cursor: pointer; /* Pointer cursor on hover */
-    transition: background-color 0.3s ease, color 0.3s ease; /* Smooth transition for hover effects */
-    text-decoration: none; /* Remove underline from text */
-    display: inline-block; /* Ensure it behaves like a button */
-}
-
-.action-btn2:hover, .action-btn2:focus {
-    background-color: white; /* Change background color on hover */
-    color: black; /* Change text color on hover */
-    outline: none; /* Remove outline on focus */
-}
-
-/* Media query for smaller devices */
-@media (max-width: 768px) {
-    .music-grid {
-        flex-direction: column; /* Stack items vertically on smaller screens */
-    }
-
-    .music-item, .music-text {
-        flex: 1 1 100%; /* Items take up 100% width on smaller screens */
-        text-align: center;
-    }
-
-    
-    
-    .music-text p {
-        font-size: 1.3rem;
-    }
-    
-    .music-item img {
-        margin-bottom: 20px;
-    }
-}
-
-.music-preview {
+  
+  .music-preview {
     padding: 20px;
     width: 100%;
     height: 100%;
     font-family: 'futura';
     line-height: 1.6;
-    background-color:rgba(255, 255, 255, 0.1);
+    background-color: rgba(255, 255, 255, 0.1);
     color: #fff;
 }
+
 .music-container {
     display: flex;
     justify-content: space-between;
@@ -404,38 +282,52 @@
     flex-wrap: wrap;
 }
 
-
 .music-grid {
     display: flex;
-
+    flex-direction: row;
     gap: 20px;
     padding: 20px;
     text-align: center;
 }
+
 .music-item {
     position: relative;
     background: rgba(0, 0, 0, 0.1);
     padding: 20px;
     border-radius: 10px;
     overflow: hidden;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.music-item img {
+    width: 100%;
+    max-width: 300px; /* Adjust the maximum width as needed */
+    height: auto;
+    border-radius: 50%; /* Make the image round */
+    transition: transform 0.3s ease-in-out;
+}
+
+.music-item img:hover {
+    transform: scale(1.1);
 }
 
 .music-item a {
     color: #fff; /* Gold color */
     text-decoration: underline;
-    font-weight: 00;
+    font-weight: 700;
     font-size: 0.9rem;
-    
+    margin-top: 10px; /* Add margin to the top of the link */
 }
+
 .music-item a:hover {
     text-decoration: underline;
 }
-.music-item {
-    width: 50%;
-    height: auto;
-}
+
 .music-text2 {
-    width: 40%;
+    width: 45%;
     text-align: center;
 }
 
@@ -444,6 +336,7 @@
     font-size: 2rem;
     margin-bottom: 10px;
 }
+
 .music-text2 p {
     font-size: 1.3rem;
     text-align: justify;
@@ -453,15 +346,20 @@
     .music-container {
         flex-direction: column;
     }
+    .music-grid {
+        flex-direction: column;
+    }
     .music-item, .music-text2 {
         width: 100%;
     }
-    
 }
+
 @media (max-width: 500px) {
-    .music-container{
+    .music-container {
         flex-direction: column;
-        
+    }
+    .music-grid {
+        flex-direction: column;
     }
     .music-item, .music-text2 {
         width: 100%;
@@ -470,7 +368,6 @@
         font-size: 1.1rem;
         text-align: center;
     }
-    
     .action-btn2 {
         font-size: 1.1rem;
     }
@@ -479,45 +376,10 @@
     }
 }
 
-
-
-.action-btn2 {
-    font-family: 'Futura';
-    background-color: transparent; /* Transparent background */
-    border: 1px solid #fff; /* White border */
-    color: #fff; /* White text */
-    padding: 10px 20px; /* Padding for the button */
-    font-size: 1.2rem; /* Font size */
-    font-family: 'Futura', sans-serif; /* Font family */
-    border-radius: 5px; /* Rounded corners */
-    cursor: pointer; /* Pointer cursor on hover */
-    transition: background-color 0.3s ease, color 0.3s ease; /* Smooth transition for hover effects */
-    text-decoration: none; /* Remove underline from text */
-    display: inline-block; /* Ensure it behaves like a button */
-}
-
-.action-btn2:hover, .action-btn2:focus {
-    background-color: white; /* Change background color on hover */
-    color: black; /* Change text color on hover */
-    outline: none; /* Remove outline on focus */
-}
-/* Media query for smaller devices */
-@media (max-width: 786px) {
-    .music P{
-        font-size: 1rem;
-    }
-}
-@media (max-width: 500px) {
-    .action-btn2 {
-        font-size: 1.1rem;
-    }
-    .music-preview{
-        margin-top: 0;
-    }
-    
-    .music-item a {
-        font-size: 1rem;
-    }
+.section-title {
+    font-size: 2.5rem;
+    margin-bottom: 40px;
+    color: #FFD700; /* Gold color for the title */
 }
 
 /* Merchandise Preview Section*/
@@ -568,6 +430,7 @@
     font-size: 1.3rem;
 }
 .shop-btn {
+    font-family: 'Futura';
     display: block;
     margin: 20px auto;
     padding: 15px 30px;
@@ -624,252 +487,6 @@
     }
 }
 
-.glitch-con {
-  font-family: "Londrina Outline", cursive;
-  text-transform: uppercase;
-  position: relative;
-  width: auto;
-  height: auto;
-  margin: auto;
-  margin-bottom: 5em;
-  margin-top: 3em;
-  text-align: center;
-}
-
-section .glitch-con h2.section-title {
-  font-size: 100%;
-  margin: 0;
-  padding: 0;
-}
-
-.glitch {
-  position: relative;
-  color: white;
-  font-size: 7em;
-  animation: glitch-animation 2s infinite;
-}
-@media (max-width: 1300px) {
-  .glitch {
-    font-size: 6em;
-  }
-}
-@media (max-width: 1200px) {
-  .glitch {
-    font-size: 4em;
-  }
-}
-@media (max-width: 430px) {
-  .glitch {
-    font-size: 3em;
-    margin-bottom: 0;
-  }
-}
-
-.glitch::before, .glitch::after {
-  content: attr(data-text);
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
-.glitch::before {
-  left: 2px;
-  text-shadow: -2px 0 magenta;
-  clip: rect(24px, 550px, 90px, 0);
-  animation: glitch-before 2s infinite linear alternate-reverse;
-}
-
-.glitch::after {
-  left: -2px;
-  text-shadow: -2px 0 lightgreen;
-  clip: rect(85px, 550px, 140px, 0);
-  animation: glitch-after 2s infinite linear alternate-reverse;
-}
-
-@keyframes glitch-animation {
-  0%, 100% {
-    opacity: 1;
-  }
-  50% {
-    opacity: 0.8;
-  }
-}
-
-@keyframes glitch-before {
-  0% {
-    clip: rect(0, 9999px, 0, 0);
-    transform: skew(0.2deg);
-  }
-  5% {
-    clip: rect(0, 9999px, 85px, 0);
-    transform: skew(0.2deg);
-  }
-  10% {
-    clip: rect(0, 9999px, 145px, 0);
-    transform: skew(0.2deg);
-  }
-  15% {
-    clip: rect(0, 9999px, 75px, 0);
-    transform: skew(0.2deg);
-  }
-  20% {
-    clip: rect(0, 9999px, 100px, 0);
-    transform: skew(0.2deg);
-  }
-  25% {
-    clip: rect(0, 9999px, 70px, 0);
-    transform: skew(0.2deg);
-  }
-  30% {
-    clip: rect(0, 9999px, 50px, 0);
-    transform: skew(0.2deg);
-  }
-  35% {
-    clip: rect(0, 9999px, 90px, 0);
-    transform: skew(0.2deg);
-  }
-  40% {
-    clip: rect(0, 9999px, 40px, 0);
-    transform: skew(0.2deg);
-  }
-  45% {
-    clip: rect(0, 9999px, 80px, 0);
-    transform: skew(0.2deg);
-  }
-  50% {
-    clip: rect(0, 9999px, 30px, 0);
-    transform: skew(0.2deg);
-  }
-  55% {
-    clip: rect(0, 9999px, 60px, 0);
-    transform: skew(0.2deg);
-  }
-  60% {
-    clip: rect(0, 9999px, 70px, 0);
-    transform: skew(0.2deg);
-  }
-  65% {
-    clip: rect(0, 9999px, 60px, 0);
-    transform: skew(0.2deg);
-  }
-  70% {
-    clip: rect(0, 9999px, 100px, 0);
-    transform: skew(0.2deg);
-  }
-  75% {
-    clip: rect(0, 9999px, 50px, 0);
-    transform: skew(0.2deg);
-  }
-  80% {
-    clip: rect(0, 9999px, 40px, 0);
-    transform: skew(0.2deg);
-  }
-  85% {
-    clip: rect(0, 9999px, 20px, 0);
-    transform: skew(0.2deg);
-  }
-  90% {
-    clip: rect(0, 9999px, 70px, 0);
-    transform: skew(0.2deg);
-  }
-  95% {
-    clip: rect(0, 9999px, 50px, 0);
-    transform: skew(0.2deg);
-  }
-  100% {
-    clip: rect(0, 9999px, 0, 0);
-    transform: skew(0.2deg);
-  }
-}
-
-@keyframes glitch-after {
-  0% {
-    clip: rect(0, 9999px, 0, 0);
-    transform: skew(-0.2deg);
-  }
-  5% {
-    clip: rect(0, 9999px, 100px, 0);
-    transform: skew(-0.2deg);
-  }
-  10% {
-    clip: rect(0, 9999px, 90px, 0);
-    transform: skew(-0.2deg);
-  }
-  15% {
-    clip: rect(0, 9999px, 70px, 0);
-    transform: skew(-0.2deg);
-  }
-  20% {
-    clip: rect(0, 9999px, 60px, 0);
-    transform: skew(-0.2deg);
-  }
-  25% {
-    clip: rect(0, 9999px, 50px, 0);
-    transform: skew(-0.2deg);
-  }
-  30% {
-    clip: rect(0, 9999px, 80px, 0);
-    transform: skew(-0.2deg);
-  }
-  35% {
-    clip: rect(0, 9999px, 60px, 0);
-    transform: skew(-0.2deg);
-  }
-  40% {
-    clip: rect(0, 9999px, 40px, 0);
-    transform: skew(-0.2deg);
-  }
-  45% {
-    clip: rect(0, 9999px, 50px, 0);
-    transform: skew(-0.2deg);
-  }
-  50% {
-    clip: rect(0, 9999px, 30px, 0);
-    transform: skew(-0.2deg);
-  }
-  55% {
-    clip: rect(0, 9999px, 100px, 0);
-    transform: skew(-0.2deg);
-  }
-  60% {
-    clip: rect(0, 9999px, 70px, 0);
-    transform: skew(-0.2deg);
-  }
-  65% {
-    clip: rect(0, 9999px, 50px, 0);
-    transform: skew(-0.2deg);
-  }
-  70% {
-    clip: rect(0, 9999px, 20px, 0);
-    transform: skew(-0.2deg);
-  }
-  75% {
-    clip: rect(0, 9999px, 80px, 0);
-    transform: skew(-0.2deg);
-  }
-  80% {
-    clip: rect(0, 9999px, 60px, 0);
-    transform: skew(-0.2deg);
-  }
-  85% {
-    clip: rect(0, 9999px, 40px, 0);
-    transform: skew(-0.2deg);
-  }
-  90% {
-    clip: rect(0, 9999px, 70px, 0);
-    transform: skew(-0.2deg);
-  }
-  95% {
-    clip: rect(0, 9999px, 50px, 0);
-    transform: skew(-0.2deg);
-  }
-  100% {
-    clip: rect(0, 9999px, 0, 0);
-    transform: skew(-0.2deg);
-  }
-}
 .music {
     display: flex;
     flex-wrap: wrap;
@@ -881,11 +498,6 @@ section .glitch-con h2.section-title {
 iframe {
     flex: 1 1 45%; /* Iframe takes up 45% of the width */
     max-width: 100%;
-}
-.section-title {
-    font-size: 2.5rem;
-    margin-bottom: 40px;
-    color: #FFD700; /* Gold color for the title */
 }
 
 .gallery-container {
@@ -1259,11 +871,6 @@ nav .social-icons a:hover, nav .social-icons a:focus {
     margin: 0 auto;
 }
 
-#events-preview .section-title {
-    font-size: 2.5rem;
-    text-align: center;
-    margin-bottom: 40px;
-}
 
 .events-grid {
     display: grid;
@@ -1346,10 +953,7 @@ nav .social-icons a:hover, nav .social-icons a:focus {
 }
 
 @media (max-width: 480px) {
-    #events-preview .section-title {
-        font-size: 2rem; /* Smaller font size for section title */
-        margin-bottom: 5px; /* Reduce margin below title */
-    }
+   
     .events-grid {
         gap: 10px;
     }
@@ -1386,7 +990,7 @@ nav .social-icons a:hover, nav .social-icons a:focus {
     margin: 0 auto;
 }
 
-.section-title {
+.contact-title {
     font-family: 'Futura';
     font-size: 2.5rem;
     margin-bottom: 40px;
@@ -1406,6 +1010,10 @@ nav .social-icons a:hover, nav .social-icons a:focus {
     padding: 20px;
     background: rgba(0, 0, 0, 0.3);
     border-radius: 10px;
+}
+.contact-details h3{
+    margin-bottom: 10px;
+    font-size: 2rem;
 }
 
 .contact-details ul {
