--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,258 @@
 }
 
 
+body {
+    font-family: 'Futura', sans-serif;
+    margin: 0;
+    padding: 0;
+    max-width: 100%;
+    color: white;
+    height: 100%;
+    position: relative;
+    overflow-x: hidden; /* Prevent horizontal scrolling */
+}
+body::before {
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('images/background-image2.jpg') center center / cover no-repeat;
+    z-index: -1;
+}
+.about-navbar nav {
+    position: relative;
+}
+
+
+nav {
+    color: white;
+    padding: 10px 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+    position: absolute;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1000; /* Ensure it's above other content */
+}
+
+
+nav .logo img {
+    width: 100px;
+    height: auto;
+}
+
+nav .mainMenu {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    padding: 0;
+}
+
+nav .mainMenu li a {
+    padding: 10px 15px;
+    color: white;
+    text-decoration: none;
+}
+
+nav .openMenu, nav .closeMenu {
+    display: none;
+    font-size: 2rem;
+    cursor: pointer;
+}
+
+nav .social-icons a {
+    
+    margin: 0 20px;
+    color: white;
+    font-size: 1.2rem;
+    display:inline-block
+}
+
+
+nav .mainMenu li a {
+    font-family: 'Futura';
+    font-weight: 500;
+    font-size: 1.2rem;
+    padding: 10px 15px;
+    color: white;
+    text-decoration: none;
+    background-color: transparent; /* Ensure background is transparent initially */
+    transition: background-color 0.3s ease, color 0.3s ease; /* Smooth transition for background and color */
+}
+
+nav .mainMenu li a:hover, nav .mainMenu li a:focus {
+    background-color: #014034; /* Dark green for hover */
+    color: #FFD700; /* Gold color for text on hover */
+    cursor: pointer; /* Cursor changes to pointer to indicate clickable */
+}
+
+/* Adding focus style for accessibility */
+nav .mainMenu li a:focus {
+    outline: none;
+    box-shadow: 0 0 0 3px rgba(255, 215, 0, 0.5); /* Gold focus ring */
+}
+
+/* Styling for social media icons */
+nav .social-icons a {
+    color: white;
+    transition: color 0.3s ease;
+}
+
+nav .social-icons a:hover, nav .social-icons a:focus {
+    color: #FFD700; /* Gold color on hover/focus */
+    cursor: pointer;
+}
+
+/* Logo Styles */
+.logo img {
+    width: 43%;
+    max-width: 200px;
+    height: auto;
+    animation: logoEntrance 2s ease-out;
+}
+
+
+@keyframes logoEntrance {
+    from {
+        transform: scale(0);
+        opacity: 0;
+    }
+    50% {
+        transform: scale(1.2);
+        opacity: 0.5;
+    }
+    100% {
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
+#carousel {
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.10);
+    font-family: 'Futura';
+}
+.carousel {
+
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.carousel-container {
+    height: 100%;
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+    will-change: transform;
+    
+}
+
+.carousel-slide {
+    flex: 0 0 100%;
+    max-width: 100%;
+    position: relative; /* Needed for positioning the buttons */
+    display: flex;
+    height: auto;
+    flex-direction: column;
+    align-items: center; /* Center the content horizontally */
+    justify-content: center; /* Center the content vertically */
+}
+
+.carousel-slide video {
+    width: 100%;
+    vertical-align: middle;
+}
+
+.prev, .next {
+    position: absolute;
+    top: 75%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    background-color: rgba(0, 0, 0, 0.1);
+    border: none;
+    padding: 10px;
+    font-size: 24px;
+    color: #333;
+}
+
+.prev { left: 10px; }
+.next { right: 10px; }
+
+.action-btn {
+    font-family: 'Futura';
+    position: absolute;
+    top: 70%;
+    background-color: rgba(0, 0, 0, 0.3); /* Darker shade on hover */
+    margin-top: 20px; /* Space between the video and the button */
+    padding: 10px 20px;
+    margin-bottom: 50px;
+    font-size: 1.2rem;
+    color: white;
+    background-color: transparent;
+    border: 1px solid white; /* Adding white border */
+    border-radius: 0; /* Making the border square */
+    cursor: pointer;
+    transition: background-color 0.3s ease; /* Smooth transition for hover effect */
+}
+.action-btn:hover {
+    background-color: rgba(0, 0, 0, 0.3); /* Darker shade on hover */
+}
+.action-btn a {
+    font-family: 'Futura';
+    color: #fff;
+    text-decoration: none;
+}
+
+.button {
+    font-family: 'Futura';
+    background-color: rgba(0, 0, 0, 0.3); /* Darker shade on hover */
+    margin-top: 20px; /* Space between the video and the button */
+    padding: 10px 20px;
+    margin-bottom: 50px;
+    font-size: 2rem;
+    font-weight: 600;
+    text-align: center;
+    font-family: 'Futura';
+    color: white;
+    background-color: transparent;
+    border:1px solid white; /* Adding white border */
+    border-radius: 0; /* Making the border square */
+    cursor: pointer;
+    transition: background-color 0.3s ease; /* Smooth transition for hover effect */
+}
+
+.button:hover {
+    background-color: var(--color-quaternary);
+    color: var(--color-secondary);
+}
+
+/* Music, Events, Merch Sections */
+#welcome {
+    font-family: 'Futura';
+    background: rgba(0, 0, 0, 0.85); /* Adjusted for semi-transparency */
+    text-align: left;
+    padding: 50px 20px;
+    color: var(--white);
+}
+
+.image1 img {
+    height: auto;
+    width: 100%;
+    
+}
+
+#welcome h2 {
+    text-align: center;
+    font-size:2.5rem;
+}
+
+
 .glitch-con {
     font-family: "Londrina Outline", cursive;
     text-transform: uppercase;
@@ -264,12 +516,13 @@
   }
   
   .music-preview {
+    margin-bottom: 100px;
+    background-color: rgba(0, 0, 0, 0.9);
     padding: 20px;
     width: 100%;
     height: 100%;
     font-family: 'futura';
     line-height: 1.6;
-    background-color: rgba(255, 255, 255, 0.1);
     color: #fff;
 }
 
@@ -385,12 +638,14 @@
 /* Merchandise Preview Section*/
 
 .merch-preview {
+    margin-bottom: 50px;
+
+    background-color: rgba( 0, 0, 0, 0.9);
     padding: 20px;
     width: 100%;
     height: 100%;
     font-family: 'futura';
     line-height: 1.6;
-    background-color:rgba(255, 255, 255, 0.1);
     color: #fff;
 }
 .merch-container {
@@ -503,6 +758,10 @@ iframe {
     max-width: 100%;
 }
 
+#gallery {
+    background-color: rgba( 0, 0, 0, 0.8);
+}
+
 .gallery-container {
     margin: 20px;
     display: flex;
@@ -610,261 +869,12 @@ iframe {
     color: white;
 }*/
 
-body {
-    font-family: 'Futura', sans-serif;
-    margin: 0;
-    padding: 0;
-    max-width: 100%;
-    color: white;
-    height: 100%;
-    position: relative;
-    overflow-x: hidden; /* Prevent horizontal scrolling */
-}
-body::before {
-    content: '';
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)), url('images/background-image2.jpg') center center / cover no-repeat;
-    z-index: -1;
-}
-.about-navbar nav {
-    position: relative;
-}
-
-
-nav {
-    color: white;
-    padding: 10px 20px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
-    position: absolute;
-    width: 100%;
-    top: 0;
-    left: 0;
-    z-index: 1000; /* Ensure it's above other content */
-}
-
-
-nav .logo img {
-    width: 100px;
-    height: auto;
-}
-
-nav .mainMenu {
-    list-style: none;
-    display: flex;
-    align-items: center;
-    padding: 0;
-}
-
-nav .mainMenu li a {
-    padding: 10px 15px;
-    color: white;
-    text-decoration: none;
-}
-
-nav .openMenu, nav .closeMenu {
-    display: none;
-    font-size: 2rem;
-    cursor: pointer;
-}
-
-nav .social-icons a {
-    
-    margin: 0 20px;
-    color: white;
-    font-size: 1.2rem;
-    display:inline-block
-}
-
-
-nav .mainMenu li a {
-    font-family: 'Futura';
-    font-weight: 500;
-    font-size: 1.2rem;
-    padding: 10px 15px;
-    color: white;
-    text-decoration: none;
-    background-color: transparent; /* Ensure background is transparent initially */
-    transition: background-color 0.3s ease, color 0.3s ease; /* Smooth transition for background and color */
-}
-
-nav .mainMenu li a:hover, nav .mainMenu li a:focus {
-    background-color: #014034; /* Dark green for hover */
-    color: #FFD700; /* Gold color for text on hover */
-    cursor: pointer; /* Cursor changes to pointer to indicate clickable */
-}
-
-/* Adding focus style for accessibility */
-nav .mainMenu li a:focus {
-    outline: none;
-    box-shadow: 0 0 0 3px rgba(255, 215, 0, 0.5); /* Gold focus ring */
-}
-
-/* Styling for social media icons */
-nav .social-icons a {
-    color: white;
-    transition: color 0.3s ease;
-}
-
-nav .social-icons a:hover, nav .social-icons a:focus {
-    color: #FFD700; /* Gold color on hover/focus */
-    cursor: pointer;
-}
-
-/* Logo Styles */
-.logo img {
-    width: 43%;
-    max-width: 200px;
-    height: auto;
-    animation: logoEntrance 2s ease-out;
-}
-
-
-@keyframes logoEntrance {
-    from {
-        transform: scale(0);
-        opacity: 0;
-    }
-    50% {
-        transform: scale(1.2);
-        opacity: 0.5;
-    }
-    100% {
-        transform: scale(1);
-        opacity: 1;
-    }
-}
-
-#carousel {
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.10);
-    font-family: 'Futura';
-}
-.carousel {
-
-    overflow: hidden;
-    position: relative;
-    width: 100%;
-    height: 100%;
-}
-
-.carousel-container {
-    height: 100%;
-    display: flex;
-    transition: transform 0.5s ease-in-out;
-    will-change: transform;
-    
-}
-
-.carousel-slide {
-    flex: 0 0 100%;
-    max-width: 100%;
-    position: relative; /* Needed for positioning the buttons */
-    display: flex;
-    height: auto;
-    flex-direction: column;
-    align-items: center; /* Center the content horizontally */
-    justify-content: center; /* Center the content vertically */
-}
-
-.carousel-slide video {
-    width: 100%;
-    vertical-align: middle;
-}
-
-.prev, .next {
-    position: absolute;
-    top: 75%;
-    transform: translateY(-50%);
-    cursor: pointer;
-    background-color: rgba(0, 0, 0, 0.1);
-    border: none;
-    padding: 10px;
-    font-size: 24px;
-    color: #333;
-}
-
-.prev { left: 10px; }
-.next { right: 10px; }
-
-.action-btn {
-    font-family: 'Futura';
-    position: absolute;
-    top: 70%;
-    background-color: rgba(0, 0, 0, 0.3); /* Darker shade on hover */
-    margin-top: 20px; /* Space between the video and the button */
-    padding: 10px 20px;
-    margin-bottom: 50px;
-    font-size: 1.2rem;
-    color: white;
-    background-color: transparent;
-    border: 1px solid white; /* Adding white border */
-    border-radius: 0; /* Making the border square */
-    cursor: pointer;
-    transition: background-color 0.3s ease; /* Smooth transition for hover effect */
-}
-.action-btn:hover {
-    background-color: rgba(0, 0, 0, 0.3); /* Darker shade on hover */
-}
-.action-btn a {
-    font-family: 'Futura';
-    color: #fff;
-    text-decoration: none;
-}
-
-.button {
-    font-family: 'Futura';
-    background-color: rgba(0, 0, 0, 0.3); /* Darker shade on hover */
-    margin-top: 20px; /* Space between the video and the button */
-    padding: 10px 20px;
-    margin-bottom: 50px;
-    font-size: 2rem;
-    font-weight: 600;
-    text-align: center;
-    font-family: 'Futura';
-    color: white;
-    background-color: transparent;
-    border:1px solid white; /* Adding white border */
-    border-radius: 0; /* Making the border square */
-    cursor: pointer;
-    transition: background-color 0.3s ease; /* Smooth transition for hover effect */
-}
-
-.button:hover {
-    background-color: var(--color-quaternary);
-    color: var(--color-secondary);
-}
-
-/* Music, Events, Merch Sections */
-#welcome {
-    font-family: 'Futura';
-    background: rgba(0, 0, 0, 0.85); /* Adjusted for semi-transparency */
-    text-align: left;
-    padding: 50px 20px;
-    color: var(--white);
-}
-
-.image1 img {
-    height: auto;
-    width: 100%;
-    
-}
-
-#welcome h2 {
-    text-align: center;
-    font-size:2.5rem;
-}
-
 /* Events Section Styles */
 #events-preview {
+    margin-bottom: 50px;
+
     font-family: 'Futura';
-    background: rgba(0, 0, 0, 0.3); /* Reddish color with 50% transparency */
+    background: rgba(0, 0, 0, 0.5); /* Reddish color with 50% transparency */
     padding: 50px 20px;
     color: white;
 }
@@ -929,9 +939,13 @@ nav .social-icons a:hover, nav .social-icons a:focus {
 
 @media (max-width: 768px) {
     .events-grid {
+
+        margin-bottom: none;
+        text-align: center;
         grid-template-columns: 1fr; /* One column on smaller screens */
         gap: 10px; /* Reduce gap between items */
     }
+
 
     .event-preview {
         height: 250px; /* Reduce height of event preview */
@@ -942,6 +956,7 @@ nav .social-icons a:hover, nav .social-icons a:focus {
     }
 
     .event-info h3 {
+        margin-bottom: 20px;
         font-size: 1.2rem; /* Smaller font size for event title */
     }
 
@@ -980,6 +995,7 @@ nav .social-icons a:hover, nav .social-icons a:focus {
 }
 
 #contact {
+    margin-bottom: 50px;
 
     line-height: 1.6;
     padding: 50px 20px;
@@ -997,7 +1013,7 @@ nav .social-icons a:hover, nav .social-icons a:focus {
     font-family: 'Futura';
     font-size: 2.5rem;
     margin-bottom: 40px;
-    color: #FFD700; /* Gold color for the title */
+    color: #fff; /* Gold color for the title */
 }
 
 .contact-content {
@@ -1088,82 +1104,6 @@ nav .social-icons a:hover, nav .social-icons a:focus {
     
 }
 
-
-/*#events-preview {
-    background-color: #2C3531; 
-    padding: 50px 0;
-    text-align: center;
-    color: white;
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('images/event-background\ 1.jpg');
-    background-size: cover;
-    background-attachment: fixed;
-    margin-bottom: 70px;
-
-}
-
-#events-preview .container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 20px;
-}
-
-#events-preview h2 {
-    font-size: 2.5rem;
-    margin-bottom: 30px;
-}
-
-.events-grid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
-}
-
-.event-preview {
-    height: 300px;
-    background-size: cover;
-    background-position: center;
-    position: relative;
-    display: flex;
-    align-items: flex-end;
-    border-radius: 8px;
-    overflow: hidden;
-
-}
-
-
-
-.event-info {
-    width: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    padding: 20px;
-    text-align: left;
-}
-
-.event-info h3 {
-    margin: 0;
-    font-size: 1.5rem;
-}
-
-.event-info .event-date {
-    margin: 5px 0;
-    font-size: 1.2rem;
-}
-
-.event-info .event-button {
-    display: inline-block;
-    background-color: #116466; 
-    color: white;
-    text-decoration: none;
-    padding: 10px 15px;
-    border-radius: 5px;
-    margin-top: 10px;
-    transition: background-color 0.3s;
-}
-
-.event-info .event-button:hover {
-    background-color: #FFCB9A; 
-    color: #2C3531;
-}*/
 
 
 /* Music Page */
